<resources>
    <string name="app_name">Virtue</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_progress">Progress</string>
    <string name="appwidget_text">Virtue</string>
    <string name="configure">Configure Virtue Widget</string>
    <string name="add_widget">Save Widget</string>
    <string name="title_activity_virtue_survey">Journal</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_splash">Virtue</string>
    <string name="select_virtue_button">Start</string>
    <string name="v1_title">Temperance</string>
    <string name="v1_desc">"Eat not to dullness; drink not to elevation."</string>
    <string name="v2_title">Silence</string>
    <string name="v2_desc">Speak not but what may benefit others or yourself; avoid trifling conversation.</string>
    <string name="v3_title">Order</string>
    <string name="v3_desc">Let all your things have their places; let each part of your business have its time.</string>
    <string name="v4_title">Resolution</string>
    <string name="v4_desc">Resolve to perform what you ought; perform without fail what you resolve.</string>
    <string name="v5_title">Frugality</string>
    <string name="v5_desc">Make no expense but to do good to others or yourself; i.e., waste nothing.</string>
    <string name="v6_title">Industry</string>
    <string name="v6_desc">Lose no time; be always employed in something useful; cut off all unnecessary actions.</string>
    <string name="v7_title">Sincerity</string>
    <string name="v7_desc">Use no hurtful deceit; think innocently and justly, and, if you speak, speak accordingly.</string>
    <string name="v8_title">Justice</string>
    <string name="v8_desc">Wrong none by doing injuries, or omitting the benefits that are your duty.</string>
    <string name="v9_title">Moderation</string>
    <string name="v9_desc">Avoid extremes; forbear resenting injuries so much as you think they deserve.</string>
    <string name="v10_title">Cleanliness</string>
    <string name="v10_desc">Tolerate no uncleanliness in body, cloths, or habitation.</string>
    <string name="v11_title">Tranquility</string>
    <string name="v11_desc">Be not disturbed at trifles, or at accidents common or unavoidable.</string>
    <string name="v12_title">Chastity</string>
    <string name="v12_desc">Rarely use venery but for health or offspring, never to dullness, weakness, or the injury of your own or another\'s peace or reputation.</string>
    <string name="v13_title">Humility</string>
    <string name="v13_desc">Imitate Jesus and Socrates.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_time">Reminder Time</string>
    <string name="pref_default_time">22:00</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">Enable Nightly Reminder</string>
    <string name="pref_title_ringtone">Notification Sound</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_progress">Progress</string>
    <string name="progress_header">DATE\t\t\t\t\tT\t\tS\t\tO\t\tR\t\tF\t\tI\t\tS\t\tJ\t\tM\t\tC\t\tT\t\tC\t\tH</string>
    <string name="v2_button_text">Silence</string>
    <string name="v1_button_txt">Temperance</string>
    <string name="v3_button_txt">Order</string>
    <string name="v4_button_txt">Resolution</string>
    <string name="v5_button_txt">Frugality</string>
    <string name="v6_button_txt">Industry</string>
    <string name="v7_button_txt">Sincerity</string>
    <string name="v8_button_txt">Justice</string>
    <string name="v9_button_txt">Moderation</string>
    <string name="v10_button_txt">Cleanliness</string>
    <string name="v11_button_txt">Tranquility</string>
    <string name="v12_button_txt">Chastity</string>
    <string name="v13_button_txt">Humility</string>
    <string name="default_virtue_title">Choose a Virtue</string>
    <string name="default_virtue_desc">The virtue you choose will be the focus of your energy this week. Select a virtue and press \'Start\'.</string>
    <string name="nightly_review_title">Journal</string>
    <string name="nightly_review_desc">Consider your judgements today for each of the 13 Virtues. Record them now, improve them tomorrow.</string>
    <string name="nextBtn">Next</string>
    <string name="backBtn">Back</string>
    <string name="goalTxt">\"In the first week, my great guard was to avoid every the least offense against Temperance, leaving the other virtues to their ordinary chance, only marking every evening the faults of the day.\"</string>
    <string name="yourVirtue">No Virtue Selected</string>
    <string name="finishBtnTxt">Finish</string>
    <string name="title_activity_progress_virtue">ProgressVirtueActivity</string>
    <string name="title_activity_help">Help</string>
    <string name="helpText">This app is designed to be a companion to Benjamin Franklin\'s system of self improvement. Ben created sets of spreadsheet like pages that he used to log his faults. He broke everything down into 13 distinct virtues which he believed were the foundation of a wholesome and productive lifestyle. Each night he recorded a new entry in these pre-formatted pages. He would mark a black dot next to any of the virtues where he felt he had fallen short of his personal expectations. \n\nThis app is designed to be very simple, and passive. It\'s there to let you quickly launch the app, and rate yourself on your active virtue at any time. You should also make a nightly journal entry. By default, the app will remind you to do this at 10PM. This simply logs your rating for each of the 13 virtues.\n\nOnce you have recorded at least one journal entry you can access the progress screen, which provides a visual representation of your entries. The longer and more consistently you monitor your virtues, the more useful the app becomes.</string>
    <string name="flipperDesc">flipper</string>
    <string name="helpImgDesc">desc</string>
    <string name="pref_title_theme">Light/Dark Theme</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_widget">Widget</string>
    <string name="action_home">Home</string>
    <string name="action_virtue_group">Virtues</string>
    <string name="pre_widget_desc">Configure home screen widget</string>
    <string name="pref_sync_settings_desc">Shortcut to android\'s sync settings menu</string>
    <string name="title_activity_virtue_survey_history">VirtueSurveyHistory</string>
</resources>